--- a/src/slides/Title.astro
+++ b/src/slides/Title.astro
@@ -3,6 +3,5 @@ import Slide from "../components/Slide.astro";
 ---
 
 <Slide>
-  <h2>Reveal.js + Astro</h2>
-  <p>Minimalist template for presentations on the web</p>
+  <h1>Du CSS aux shaders WebGL : panorama des techniques d'animation en 2023</h1>
 </Slide>
