--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,9 @@
 ---
 export interface Props {
-  /**
-   * Title of the page
-   */
-  title: string;
+	/**
+	 * Title of the page
+	 */
+	title: string;
 }
 
 const { title } = Astro.props;
@@ -11,32 +11,38 @@ const { title } = Astro.props;
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/slides-template/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" type="image/svg+xml" href="/slides-template/favicon.svg" />
+		<meta name="generator" content={Astro.generator} />
 
-    <title>{title}</title>
-  </head>
+		<title>{title}</title>
+	</head>
 
-  <body>
-    <slot />
+	<body>
+		<slot />
 
-    <script>
-      import Reveal from "reveal.js";
+		<script>
+			import Reveal from "reveal.js";
+			import RevealHighlight from "reveal.js/plugin/highlight/highlight";
 
-      Reveal.initialize({
-        transition: "none",
-        history: true,
-        autoAnimateDuration: 0.5,
-        autoAnimateEasing: "cubic-bezier(0.4, 0, 0.2, 1)",
-      });
-    </script>
-  </body>
+			Reveal.initialize({
+				transition: "none",
+				history: true,
+				progress: false,
+				controls: false,
+				autoAnimateDuration: 0.7,
+				autoAnimateEasing: "cubic-bezier(0.4, 0, 0.2, 1)",
+				help: false,
+				plugins: [RevealHighlight],
+			});
+		</script>
+	</body>
 </html>
 
-<style is:global>
-  @import "reveal.js/dist/reveal.css";
-  @import "reveal.js/dist/theme/night.css";
+<style is:global lang="scss">
+	@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap");
+	@import "reveal.js/dist/reveal.css" layer(reveal);
+	@import "src/styles/main.scss";
 </style>
