--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Title from "../slides/Title.astro";
+import CSSTransition from "../slides/css/transition/CSSTransition.astro";
 ---
 
 <Layout
@@ -9,6 +10,7 @@ import Title from "../slides/Title.astro";
 	<main class="reveal">
 		<div class="slides">
 			<Title />
+			<CSSTransition />
 		</div>
 	</main>
 </Layout>
