--- a/src/components/CodeBlock.astro
+++ b/src/components/CodeBlock.astro
@@ -23,7 +23,6 @@ const { lang, lines } = Astro.props;
 		display: inline-block;
 		font-size: 1.2em;
 		margin-left: 0.5em;
-		margin-bottom: 0.25em;
 		opacity: 0.7;
 		color: var(--font-color-strong);
 	}
@@ -31,7 +30,7 @@ const { lang, lines } = Astro.props;
 	.reveal .code-wrapper {
 		display: flex;
 		background-color: #272822;
-		border-radius: 6px;
+		border-radius: 0.5em;
 		max-height: 82vh;
 		overflow: auto;
 		line-height: 1.2;
@@ -50,7 +49,7 @@ const { lang, lines } = Astro.props;
 
 		& > code {
 			width: fit-content;
-			padding: 2rem;
+			padding: 2em;
 		}
 	}
 </style>
