--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,6 +36,10 @@ const { title } = Astro.props;
 				autoAnimateEasing: "cubic-bezier(0.4, 0, 0.2, 1)",
 				help: false,
 				plugins: [RevealHighlight],
+				width: "100%",
+				height: "100%",
+				margin: 0,
+				center: false,
 			});
 		</script>
 	</body>
