--- a/src/slides/css/transition/TranslateBad.astro
+++ b/src/slides/css/transition/TranslateBad.astro
@@ -37,19 +37,19 @@ const subSectionTitle = "La translation";
 
 <SlideDemo sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<div class="container">
-		<p><span class="card gray"></span></p>
+		<p><span class="card gray inert"></span></p>
 		<p>
 			<label>
 				<input type="checkbox" />
 				<span class="card primary">Clique !</span>
 			</label>
 		</p>
-		<p><span class="card gray"></span></p>
-		<p><span class="card secondary"></span></p>
-		<p><span class="card gray"></span></p>
-		<p><span class="card gray"></span></p>
-		<p><span class="card gray"></span></p>
-		<p><span class="card gray"></span></p>
+		<p><span class="card gray inert"></span></p>
+		<p><span class="card secondary inert"></span></p>
+		<p><span class="card gray inert"></span></p>
+		<p><span class="card gray inert"></span></p>
+		<p><span class="card gray inert"></span></p>
+		<p><span class="card gray inert"></span></p>
 	</div>
 </SlideDemo>
 
