--- a/src/slides/css/transition/TranslateGood.astro
+++ b/src/slides/css/transition/TranslateGood.astro
@@ -8,7 +8,7 @@ const subSectionTitle = "La translation";
 
 <SlideDemo sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<div class="container">
-		<p><span class="card gray"></span></p>
+		<p><span class="card gray inert"></span></p>
 		<p>
 			<label>
 				<span class="fragment border"></span>
@@ -16,12 +16,12 @@ const subSectionTitle = "La translation";
 				<span class="card primary">Clique !</span>
 			</label>
 		</p>
-		<p><span class="card gray"></span></p>
-		<p><span class="card gray"></span></p>
-		<p><span class="card gray"></span></p>
-		<p><span class="card gray"></span></p>
-		<p><span class="card gray"></span></p>
-		<p><span class="card gray"></span></p>
+		<p><span class="card gray inert"></span></p>
+		<p><span class="card gray inert"></span></p>
+		<p><span class="card gray inert"></span></p>
+		<p><span class="card gray inert"></span></p>
+		<p><span class="card gray inert"></span></p>
+		<p><span class="card gray inert"></span></p>
 	</div>
 </SlideDemo>
 
