--- a/src/slides/css/transition/CSSTransition.astro
+++ b/src/slides/css/transition/CSSTransition.astro
@@ -1,5 +1,8 @@
 ---
 import Slide from "../../../components/Slide.astro";
+import Example3DCards from "./Example3DCards.astro";
+import ExampleButton from "./ExampleButton.astro";
+import ExampleMovieCard from "./ExampleMovieCard.astro";
 import RotationBezierCurves from "./RotationBezierCurves.astro";
 import SimpleHover from "./SimpleHover.astro";
 import TranslateBad from "./TranslateBad.astro";
@@ -34,3 +37,6 @@ const title = "Transition CSS";
 <TranslateGood title={title} />
 <RotationBezierCurves title={title} />
 <TranslationCurves title={title} />
+<ExampleButton title={title} />
+<ExampleMovieCard title={title} />
+<Example3DCards title={title} />
