--- a/src/slides/css/transition/CSSTransition.astro
+++ b/src/slides/css/transition/CSSTransition.astro
@@ -40,3 +40,7 @@ const title = "Transition CSS";
 <ExampleButton title={title} />
 <ExampleMovieCard title={title} />
 <Example3DCards title={title} />
+
+<Slide>
+	<h1>{title} - recap</h1>
+</Slide>
