feat: add section for CSS animations

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import BlockMainThreadButtonCorner from "../components/BlockMainThreadButtonCorner.svelte";
 import Layout from "../layouts/Layout.astro";
 import Title from "../slides/Title.astro";
+import CSSAnimation from "../slides/css/animation/CSSAnimation.astro";
 import CSSTransition from "../slides/css/transition/CSSTransition.astro";
 import TechnicalIntro from "../slides/intro/TechnicalIntro.astro";
 ---
@@ -15,6 +16,7 @@ import TechnicalIntro from "../slides/intro/TechnicalIntro.astro";
 			<Title />
 			<TechnicalIntro />
 			<CSSTransition />
+			<CSSAnimation />
 		</div>
 	</main>
 </Layout>
