--- a/src/slides/intro/TechnicalIntro.astro
+++ b/src/slides/intro/TechnicalIntro.astro
@@ -1,7 +1,12 @@
 ---
+import Slide from "../../components/Slide.astro";
 import BlockCPUButton from "./BlockCPUButton.astro";
 
 const title = "Bases techniques";
 ---
+
+<Slide>
+	<h1>{title}</h1>
+</Slide>
 
 <BlockCPUButton title={title} />
