--- a/src/slides/css/animation/CSSAnimation.astro
+++ b/src/slides/css/animation/CSSAnimation.astro
@@ -3,6 +3,7 @@ import Slide from "../../../components/Slide.astro";
 import FadeIn from "./FadeIn.astro";
 import FakeDropdownMenu from "./FakeDropdownMenu.astro";
 import Loaders from "./Loaders.astro";
+import SVGAnimation from "./SVGAnimation.astro";
 import SimpleDemo from "./SimpleDemo.astro";
 
 const title = "Animation CSS";
@@ -24,6 +25,7 @@ const title = "Animation CSS";
 <FadeIn title={title} />
 <FakeDropdownMenu title={title} />
 <Loaders title={title} />
+<SVGAnimation title={title} />
 
 <Slide>
 	<h1>{title} - recap</h1>
