feat: add CSS animation with slider and scroll

--- a/src/components/Slide.astro
+++ b/src/components/Slide.astro
@@ -33,6 +33,7 @@ const { animate = true, sectionTitle, subSectionTitle } = Astro.props;
 
 	.titles {
 		position: absolute;
+		z-index: 1;
 		text-align: left;
 		top: 1.5rem;
 		left: 2rem;
