--- a/src/slides/css/animation/CSSAnimation.astro
+++ b/src/slides/css/animation/CSSAnimation.astro
@@ -1,5 +1,6 @@
 ---
 import Slide from "../../../components/Slide.astro";
+import AnimationStates from "./AnimationStates.astro";
 import FadeIn from "./FadeIn.astro";
 import FakeDropdownMenu from "./FakeDropdownMenu.astro";
 import Loaders from "./Loaders.astro";
@@ -26,6 +27,7 @@ const title = "Animation CSS";
 <FakeDropdownMenu title={title} />
 <Loaders title={title} />
 <SVGAnimation title={title} />
+<AnimationStates {title} />
 
 <Slide>
 	<h1>{title} - recap</h1>
