feat: add section for requestAnimationFrame

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Title from "../slides/Title.astro";
 import CSSAnimation from "../slides/css/animation/CSSAnimation.astro";
 import CSSTransition from "../slides/css/transition/CSSTransition.astro";
 import TechnicalIntro from "../slides/intro/TechnicalIntro.astro";
+import RequestAnimationFrame from "../slides/vanilla-js/requestanimationframe/RequestAnimationFrame.astro";
 ---
 
 <Layout
@@ -17,6 +18,7 @@ import TechnicalIntro from "../slides/intro/TechnicalIntro.astro";
 			<TechnicalIntro />
 			<CSSTransition />
 			<CSSAnimation />
+			<RequestAnimationFrame />
 		</div>
 	</main>
 </Layout>
