--- a/src/slides/css/transition/CSSTransition.astro
+++ b/src/slides/css/transition/CSSTransition.astro
@@ -13,11 +13,11 @@ const title = "Transition CSS";
 ---
 
 <Slide>
-	<h1>{title}</h1>
+	<h1>{title + " "}</h1>
 </Slide>
 
 <Slide>
-	<h1>{title}</h1>
+	<h1>{title + " "}</h1>
 	<p>
 		Usage: passage d’un état A à un état B <span class="fragment custom bar"
 			>différents</span
