--- a/src/slides/intro/TechnicalIntro.astro
+++ b/src/slides/intro/TechnicalIntro.astro
@@ -6,7 +6,7 @@ const title = "Bases techniques";
 ---
 
 <Slide>
-	<h1>{title}</h1>
+	<h1>{title + " "}</h1>
 </Slide>
 
 <BlockCPUButton title={title} />
