--- a/src/slides/css/animation/CSSAnimation.astro
+++ b/src/slides/css/animation/CSSAnimation.astro
@@ -11,11 +11,11 @@ const title = "Animation CSS";
 ---
 
 <Slide>
-	<h1>{title}</h1>
+	<h1>{title + " "}</h1>
 </Slide>
 
 <Slide>
-	<h1>{title}</h1>
+	<h1>{title + " "}</h1>
 	<p>
 		Usage: animation composée d’au moins deux états, qui <em>peut</em> être déclenchée
 		immédiatement et qui <em>peut</em> ne jamais se terminer
