--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import CSSAnimation from "../slides/css/animation/CSSAnimation.astro";
 import CSSTransition from "../slides/css/transition/CSSTransition.astro";
 import TechnicalIntro from "../slides/intro/TechnicalIntro.astro";
 import RequestAnimationFrame from "../slides/vanilla-js/requestanimationframe/RequestAnimationFrame.astro";
+import WebAnimationAPI from "../slides/vanilla-js/web-animation-api/WebAnimationAPI.astro";
 ---
 
 <Layout
@@ -16,9 +17,12 @@ import RequestAnimationFrame from "../slides/vanilla-js/requestanimationframe/Re
 			<BlockMainThreadButtonCorner client:visible client:only />
 			<Title />
 			<TechnicalIntro />
+
+			<!-- Part 1 -->
 			<CSSTransition />
 			<CSSAnimation />
 			<RequestAnimationFrame />
+			<WebAnimationAPI />
 		</div>
 	</main>
 </Layout>
