--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,7 @@ const { title } = Astro.props;
 		<script>
 			import Reveal from "reveal.js";
 			import RevealHighlight from "reveal.js/plugin/highlight/highlight";
+			import RevealMermaid from "reveal.js-mermaid-plugin";
 
 			Reveal.initialize({
 				transition: "none",
@@ -35,7 +36,7 @@ const { title } = Astro.props;
 				autoAnimateDuration: 0.7,
 				autoAnimateEasing: "cubic-bezier(0.4, 0, 0.2, 1)",
 				help: false,
-				plugins: [RevealHighlight],
+				plugins: [RevealHighlight, RevealMermaid],
 				width: "100%",
 				height: "100%",
 				margin: 0,
