feat: add section for FLIP

--- a/src/components/Slide.astro
+++ b/src/components/Slide.astro
@@ -15,8 +15,8 @@ const { animate = true, sectionTitle, subSectionTitle } = Astro.props;
 
 <section data-auto-animate={animate}>
 	<div class="titles">
-		<h1>{sectionTitle}</h1>
-		<h2>{subSectionTitle}</h2>
+		{sectionTitle && <h1>{sectionTitle}</h1>}
+		{subSectionTitle && <h2>{subSectionTitle}</h2>}
 	</div>
 	<slot />
 </section>
