--- a/src/slides/part-1/css/transition/SimpleHover.astro
+++ b/src/slides/part-1/css/transition/SimpleHover.astro
@@ -16,8 +16,8 @@ const subSectionTitle = "Exemple minimal";
 	<p>
 		<span class="demo">Bonjour 👋</span>
 	</p>
-	<CodeBlock lang="css" lines="|2|3|5-7|"
-		>{
+	<CodeBlock lang="css" lines="|2|3|5-7|">
+		{
 			`.demo {
   background-color: lightblue;
   transition: background-color 300ms ease-out;
@@ -26,8 +26,8 @@ const subSectionTitle = "Exemple minimal";
     background-color: blue;
   }
 }`
-		}</CodeBlock
-	>
+		}
+	</CodeBlock>
 </SlideDemo>
 
 <style lang="scss">
