feat: add section about JS frameworks

--- a/src/slides/part-2/flip/Flip.astro
+++ b/src/slides/part-2/flip/Flip.astro
@@ -6,6 +6,11 @@ const title = "FLIP";
 ---
 
 <Slide>
+	<p class="last-technique">Une dernière technique...</p>
+</Slide>
+
+<Slide>
+	<p class="last-technique">Une dernière technique...</p>
 	<h1>{title + " "}</h1>
 </Slide>
 
@@ -26,5 +31,8 @@ const title = "FLIP";
 <style>
 	h1 span {
 		display: inline-grid;
+	}
+	.last-technique {
+		font-size: 1.4em;
 	}
 </style>
