feat: add section for JS libraries for frameworks

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Part1Title from "../slides/part-1/Part1Title.astro";
 import Part2Title from "../slides/part-2/Part2Title.astro";
 import Flip from "../slides/part-2/flip/Flip.astro";
 import JSFrameworks from "../slides/part-2/js-frameworks/JSFrameworks.astro";
+import JSLibraries from "../slides/part-2/js-libraries/JSLibraries.astro";
 ---
 
 <Layout
@@ -33,6 +34,7 @@ import JSFrameworks from "../slides/part-2/js-frameworks/JSFrameworks.astro";
 			<Part2Title />
 			<Flip />
 			<JSFrameworks />
+			<JSLibraries />
 		</div>
 	</main>
 </Layout>
