feat: add section for vanilla JS libraries

--- a/src/slides/part-2/js-libraries/JSLibraries.astro
+++ b/src/slides/part-2/js-libraries/JSLibraries.astro
@@ -2,6 +2,7 @@
 import Slide from "../../../components/Slide.astro";
 import Framer from "./framer/Framer.astro";
 import ReactSpring from "./react-spring/ReactSpring.astro";
+import VanillaJS from "./vanilla-js/VanillaJS.astro";
 import VueUseMotion from "./vue-use/VueUseMotion.astro";
 
 const title = "Librairies JavaScript";
@@ -14,3 +15,5 @@ const title = "Librairies JavaScript";
 <Framer title={title} />
 <ReactSpring title={title} />
 <VueUseMotion title={title} />
+
+<VanillaJS title={title} />
