refactor: group the slides in sections

--- a/src/slides/intro/TechnicalIntro.astro
+++ b/src/slides/intro/TechnicalIntro.astro
@@ -5,8 +5,10 @@ import BlockCPUButton from "./BlockCPUButton.astro";
 const title = "Bases techniques";
 ---
 
-<Slide>
-	<h1>{title + " "}</h1>
-</Slide>
+<section>
+	<Slide>
+		<h1>{title + " "}</h1>
+	</Slide>
 
-<BlockCPUButton title={title} />
+	<BlockCPUButton title={title} />
+</section>
