--- a/src/slides/part-1/vanilla-js/web-animation-api/WebAnimationAPI.astro
+++ b/src/slides/part-1/vanilla-js/web-animation-api/WebAnimationAPI.astro
@@ -7,9 +7,11 @@ import Usage from "./sections/Usage.astro";
 const title = "Web Animation API";
 ---
 
-<WAAPIIntro title={title} />
+<section>
+	<WAAPIIntro title={title} />
 
-<Usage title={title} />
-<ControlingExecution title={title} />
+	<Usage title={title} />
+	<ControlingExecution title={title} />
 
-<WAAPIOutro title={title} />
+	<WAAPIOutro title={title} />
+</section>
