--- a/src/slides/part-2/flip/Flip.astro
+++ b/src/slides/part-2/flip/Flip.astro
@@ -5,28 +5,30 @@ import FlipDemo from "./FlipDemo.svelte";
 const title = "FLIP";
 ---
 
-<Slide>
-	<p class="last-technique">Une dernière technique...</p>
-</Slide>
+<section>
+	<Slide>
+		<p class="last-technique">Une dernière technique...</p>
+	</Slide>
 
-<Slide>
-	<p class="last-technique">Une dernière technique...</p>
-	<h1>{title + " "}</h1>
-</Slide>
+	<Slide>
+		<p class="last-technique">Une dernière technique...</p>
+		<h1>{title + " "}</h1>
+	</Slide>
 
-<Slide>
-	<h1>{title + " "}</h1>
-	<p>
-		Usage: déplacement d'éléments dans le DOM, ou autres animations qui ne
-		peuvent être faites nativement.
-	</p>
-</Slide>
+	<Slide>
+		<h1>{title + " "}</h1>
+		<p>
+			Usage: déplacement d'éléments dans le DOM, ou autres animations qui ne
+			peuvent être faites nativement.
+		</p>
+	</Slide>
 
-<Slide sectionTitle={title} subSectionTitle="Explication">
-	<FlipDemo duration={0} client:visible />
-</Slide>
+	<Slide sectionTitle={title} subSectionTitle="Explication">
+		<FlipDemo duration={0} client:visible />
+	</Slide>
 
-<FlipDefinition title={title} />
+	<FlipDefinition title={title} />
+</section>
 
 <style>
 	h1 span {
