--- a/src/slides/part-2/js-frameworks/JSFrameworks.astro
+++ b/src/slides/part-2/js-frameworks/JSFrameworks.astro
@@ -8,11 +8,13 @@ import Vue from "./vue/Vue.astro";
 const title = "Frameworks JavaScript";
 ---
 
-<Slide>
-	<h1>{title + " "}</h1>
-</Slide>
+<section>
+	<Slide>
+		<h1>{title + " "}</h1>
+	</Slide>
 
-<Vue title={title} />
-<React title={title} />
-<Svelte title={title} />
-<Angular title={title} />
+	<Vue title={title} />
+	<React title={title} />
+	<Svelte title={title} />
+	<Angular title={title} />
+</section>
