--- a/src/slides/part-1/css/transition/CSSTransition.astro
+++ b/src/slides/part-1/css/transition/CSSTransition.astro
@@ -12,35 +12,37 @@ import TranslationCurves from "./TranslationCurves.astro";
 const title = "Transition CSS";
 ---
 
-<Slide>
-	<h1>{title + " "}</h1>
-</Slide>
+<section>
+	<Slide>
+		<h1>{title + " "}</h1>
+	</Slide>
 
-<Slide>
-	<h1>{title + " "}</h1>
-	<p>
-		Usage: passage d’un état A à un état B <span class="fragment custom bar"
-			>différents</span
-		>
-		<span class="fragment custom bar">selon le plus court chemin</span>
-	</p>
-</Slide>
+	<Slide>
+		<h1>{title + " "}</h1>
+		<p>
+			Usage: passage d’un état A à un état B <span class="fragment custom bar"
+				>différents</span
+			>
+			<span class="fragment custom bar">selon le plus court chemin</span>
+		</p>
+	</Slide>
 
-<style>
-	.fragment.bar.visible {
-		text-decoration: line-through;
-	}
-</style>
+	<style>
+		.fragment.bar.visible {
+			text-decoration: line-through;
+		}
+	</style>
 
-<SimpleHover title={title} />
-<TranslateBad title={title} />
-<TranslateGood title={title} />
-<RotationBezierCurves title={title} />
-<TranslationCurves title={title} />
-<ExampleButton title={title} />
-<ExampleMovieCard title={title} />
-<Example3DCards title={title} />
+	<SimpleHover title={title} />
+	<TranslateBad title={title} />
+	<TranslateGood title={title} />
+	<RotationBezierCurves title={title} />
+	<TranslationCurves title={title} />
+	<ExampleButton title={title} />
+	<ExampleMovieCard title={title} />
+	<Example3DCards title={title} />
 
-<Slide>
-	<h1>{title} - recap</h1>
-</Slide>
+	<Slide>
+		<h1>{title} - recap</h1>
+	</Slide>
+</section>
