--- a/src/slides/part-1/vanilla-js/requestanimationframe/RequestAnimationFrame.astro
+++ b/src/slides/part-1/vanilla-js/requestanimationframe/RequestAnimationFrame.astro
@@ -9,23 +9,26 @@ import SpringAnimations from "./SpringAnimations.astro";
 const title = "requestAnimationFrame()";
 ---
 
-<Slide>
-	<h1>{title + " "}</h1>
-</Slide>
+<section>
+	<Slide>
+		<h1>{title + " "}</h1>
+	</Slide>
 
-<Slide>
-	<h1>{title + " "}</h1>
-	<p>
-		Usage: toute action à effectuer avant chaque frame rendue par le navigateur
-	</p>
-</Slide>
+	<Slide>
+		<h1>{title + " "}</h1>
+		<p>
+			Usage: toute action à effectuer avant chaque frame rendue par le
+			navigateur
+		</p>
+	</Slide>
 
-<RafUsage title={title} />
-<FpsMeter title={title} />
-<Citation title={title} />
-<RafDemos title={title} />
-<SpringAnimations title={title} />
+	<RafUsage title={title} />
+	<FpsMeter title={title} />
+	<Citation title={title} />
+	<RafDemos title={title} />
+	<SpringAnimations title={title} />
 
-<Slide>
-	<h1>{title} - recap</h1>
-</Slide>
+	<Slide>
+		<h1>{title} - recap</h1>
+	</Slide>
+</section>
