feat: add Canvas 2D

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,8 @@ import Part2Title from "../slides/part-2/Part2Title.astro";
 import Flip from "../slides/part-2/flip/Flip.astro";
 import JSFrameworks from "../slides/part-2/js-frameworks/JSFrameworks.astro";
 import JSLibraries from "../slides/part-2/js-libraries/JSLibraries.astro";
+import Part3Title from "../slides/part-3/Part3Title.astro";
+import Canvas2D from "../slides/part-3/canvas-2D/Canvas2D.astro";
 ---
 
 <Layout
@@ -35,6 +37,10 @@ import JSLibraries from "../slides/part-2/js-libraries/JSLibraries.astro";
 			<Flip />
 			<JSFrameworks />
 			<JSLibraries />
+
+			<!-- Part 3 : Canvas -->
+			<Part3Title />
+			<Canvas2D />
 		</div>
 	</main>
 </Layout>
