--- a/src/slides/part-1/vanilla-js/requestanimationframe/RequestAnimationFrame.astro
+++ b/src/slides/part-1/vanilla-js/requestanimationframe/RequestAnimationFrame.astro
@@ -24,7 +24,9 @@ const title = "requestAnimationFrame()";
 
 	<RafUsage title={title} />
 	<FpsMeter title={title} />
-	<Citation title={title} />
+	<Slide sectionTitle={title} subSectionTitle={"À retenir"}>
+		<Citation />
+	</Slide>
 	<RafDemos title={title} />
 	<SpringAnimations title={title} />
 
