--- a/src/slides/part-2/js-libraries/JSLibraries.astro
+++ b/src/slides/part-2/js-libraries/JSLibraries.astro
@@ -17,4 +17,8 @@ const title = "Librairies JavaScript";
 	<ReactSpring title={title} />
 	<VueUseMotion title={title} />
 	<VanillaJS title={title} />
+
+	<Slide>
+		<h1>{title} - recap</h1>
+	</Slide>
 </section>
