feat: add Canvas WebGL

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,7 @@ import JSFrameworks from "../slides/part-2/js-frameworks/JSFrameworks.astro";
 import JSLibraries from "../slides/part-2/js-libraries/JSLibraries.astro";
 import Part3Title from "../slides/part-3/Part3Title.astro";
 import Canvas2D from "../slides/part-3/canvas-2D/Canvas2D.astro";
+import CanvasWebgl from "../slides/part-3/canvas-webgl/CanvasWebgl.astro";
 ---
 
 <Layout
@@ -41,6 +42,7 @@ import Canvas2D from "../slides/part-3/canvas-2D/Canvas2D.astro";
 			<!-- Part 3 : Canvas -->
 			<Part3Title />
 			<Canvas2D />
+			<CanvasWebgl />
 		</div>
 	</main>
 </Layout>
