--- a/src/slides/part-3/canvas-2D/Canvas2DLibs.astro
+++ b/src/slides/part-3/canvas-2D/Canvas2DLibs.astro
@@ -53,8 +53,7 @@ const subSectionTitle = "Librairies";
 			autoplay=""
 			onclick="this.paused ? this.play() : this.pause()"
 			loop=""
-			playsinline=""
-			src="https://framerusercontent.com/modules/assets/vf5yzeIR81h15njzZ8Rs9JlHs~fFFsGu9UlIe3UelLp-S2koOxZWa_H1jb0uFbJlOgKig.mp4"
+			data-src="https://framerusercontent.com/modules/assets/vf5yzeIR81h15njzZ8Rs9JlHs~fFFsGu9UlIe3UelLp-S2koOxZWa_H1jb0uFbJlOgKig.mp4"
 		></video>
 		<p class="fragment">
 			Taille <em>(min + gzip)</em> : <strong>?kB</strong>
