--- a/src/components/CodeBlock.astro
+++ b/src/components/CodeBlock.astro
@@ -52,6 +52,16 @@ const { lang, lines } = Astro.props;
 			width: fit-content;
 			overflow: hidden;
 			padding: 2em;
+
+			&::-webkit-scrollbar {
+				width: 8px;
+				background-color: transparent;
+			}
+
+			&::-webkit-scrollbar-thumb {
+				background: #555;
+				border-radius: 4px;
+			}
 		}
 	}
 </style>
